crates/rymx/tests/errors/comparisons.rym
// TODO Should fail with: Chaining comparison operators is not allowed.
const test = 1 == 2 == 3;
